// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beagle Error - render correctly with details Should match the snapshot 1`] = `
<ComponentWithTheme
  className="Test Class"
  errors={
    Array [
      Object {
        "message": "First Message",
      },
      Object {
        "message": "Second Message",
      },
    ]
  }
  retry={[MockFunction]}
>
  <BeagleError
    className="Test Class"
    errors={
      Array [
        Object {
          "message": "First Message",
        },
        Object {
          "message": "Second Message",
        },
      ]
    }
    retry={[MockFunction]}
  >
    <styled.section
      className="Test Class"
    >
      <section
        className="sc-dlfnbm DatSL Test Class"
      >
        <ComponentWithTheme
          text="Sorry!"
          textColor="red"
        >
          <BeagleText
            className=""
            text="Sorry!"
            textColor="red"
          >
            <styled.p
              className=""
              textColor="red"
            >
              <p
                className="sc-bdfBwQ eliSds"
              >
                Sorry!
              </p>
            </styled.p>
          </BeagleText>
        </ComponentWithTheme>
        <ComponentWithTheme
          text="An unexpected error happened while loading your page."
        >
          <BeagleText
            className=""
            text="An unexpected error happened while loading your page."
          >
            <styled.p
              className=""
            >
              <p
                className="sc-bdfBwQ fTPwPK"
              >
                An unexpected error happened while loading your page.
              </p>
            </styled.p>
          </BeagleText>
        </ComponentWithTheme>
        <Styled(ComponentWithTheme)
          data-testid="retry"
          onPress={[MockFunction]}
          text="Retry"
        >
          <ComponentWithTheme
            className="sc-hKgILt lhgqZA"
            data-testid="retry"
            onPress={[MockFunction]}
            text="Retry"
          >
            <BeagleButton
              className="sc-hKgILt lhgqZA"
              data-testid="retry"
              onPress={[MockFunction]}
              text="Retry"
            >
              <styled.button
                aria-disabled={false}
                className="sc-hKgILt lhgqZA"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-disabled={false}
                  className="sc-gsTCUz gtYKES sc-hKgILt lhgqZA"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Retry
                </button>
              </styled.button>
            </BeagleButton>
          </ComponentWithTheme>
        </Styled(ComponentWithTheme)>
        <Styled(ComponentWithTheme)
          data-testid="show-more"
          onPress={[Function]}
          text="Show details ▼"
        >
          <ComponentWithTheme
            className="sc-eCssSg dkdlFW"
            data-testid="show-more"
            onPress={[Function]}
            text="Show details ▼"
          >
            <BeagleButton
              className="sc-eCssSg dkdlFW"
              data-testid="show-more"
              onPress={[Function]}
              text="Show details ▼"
            >
              <styled.button
                aria-disabled={false}
                className="sc-eCssSg dkdlFW"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-disabled={false}
                  className="sc-gsTCUz gtYKES sc-eCssSg dkdlFW"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Show details ▼
                </button>
              </styled.button>
            </BeagleButton>
          </ComponentWithTheme>
        </Styled(ComponentWithTheme)>
        <styled.section
          className=""
          data-testid="details"
        >
          <section
            className="sc-jSgupP cMxdgM"
            data-testid="details"
          >
            <p
              className="error-message"
              key="key_0"
            >
              <span
                className="error-indicator"
              >
                ►
              </span>
               ERROR:
               
              First Message
            </p>
            <p
              className="error-message"
              key="key_1"
            >
              <span
                className="error-indicator"
              >
                ►
              </span>
               ERROR:
               
              Second Message
            </p>
          </section>
        </styled.section>
      </section>
    </styled.section>
  </BeagleError>
</ComponentWithTheme>
`;

exports[`Beagle Error - render correctly without details Should match the snapshot 1`] = `
<ComponentWithTheme
  className="Test Class"
  errors={Array []}
  retry={[MockFunction]}
>
  <BeagleError
    className="Test Class"
    errors={Array []}
    retry={[MockFunction]}
  >
    <styled.section
      className="Test Class"
    >
      <section
        className="sc-dlfnbm DatSL Test Class"
      >
        <ComponentWithTheme
          text="Sorry!"
          textColor="red"
        >
          <BeagleText
            className=""
            text="Sorry!"
            textColor="red"
          >
            <styled.p
              className=""
              textColor="red"
            >
              <p
                className="sc-bdfBwQ eliSds"
              >
                Sorry!
              </p>
            </styled.p>
          </BeagleText>
        </ComponentWithTheme>
        <ComponentWithTheme
          text="An unexpected error happened while loading your page."
        >
          <BeagleText
            className=""
            text="An unexpected error happened while loading your page."
          >
            <styled.p
              className=""
            >
              <p
                className="sc-bdfBwQ fTPwPK"
              >
                An unexpected error happened while loading your page.
              </p>
            </styled.p>
          </BeagleText>
        </ComponentWithTheme>
        <Styled(ComponentWithTheme)
          data-testid="retry"
          onPress={[MockFunction]}
          text="Retry"
        >
          <ComponentWithTheme
            className="sc-hKgILt lhgqZA"
            data-testid="retry"
            onPress={[MockFunction]}
            text="Retry"
          >
            <BeagleButton
              className="sc-hKgILt lhgqZA"
              data-testid="retry"
              onPress={[MockFunction]}
              text="Retry"
            >
              <styled.button
                aria-disabled={false}
                className="sc-hKgILt lhgqZA"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <button
                  aria-disabled={false}
                  className="sc-gsTCUz gtYKES sc-hKgILt lhgqZA"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Retry
                </button>
              </styled.button>
            </BeagleButton>
          </ComponentWithTheme>
        </Styled(ComponentWithTheme)>
      </section>
    </styled.section>
  </BeagleError>
</ComponentWithTheme>
`;
